...
      String via = viaController.text;
      String provincia = provinciaController.text;
      String imagePath = 'images/supportomedico11.jpg';

      SupportoMedicoDTO supporto = SupportoMedicoDTO(
          immagine: imagePath,
          nomeMedico: nomeMedico,
          cognomeMedico: cognomeMedico,
          descrizione: descrizione,
          tipo: tipo,
          email: email,
          numTelefono: numTelefono,
          citta: citta,
          via: via,
          provincia: provincia);

      await sendDataToServer(supporto);
    } else {
      print("Errore creazione oggetto corso");
    }
  }
...
      final imageResponse = await imageRequest.send();
      if (imageResponse.statusCode == 200) {
        Navigator.pushNamed(context, AppRoutes.homeCA);
        ScaffoldMessenger.of(context).showSnackBar(
          const SnackBar(
            content: Text(
              'Supporto medico inserito con successo',
              style: TextStyle(
                color: Colors.white,
                fontSize: 16,
              ),
            ),
            backgroundColor: Colors.lightBlue,
...
    return Scaffold(
      appBar: AdsAppBar(
        showBackButton: true,
      ),
      endDrawer: AdsAppBar.buildDrawer(context),
      body: SingleChildScrollView(
        key: const Key('inserisciSupporto'),
        child: Padding(
          padding: EdgeInsets.all(screenWidth * 0.08),
          child:
              Column(crossAxisAlignment: CrossAxisAlignment.center, children: [
            const Text(
              'Inserisci Supporto Medico',
...
                    padding: EdgeInsets.only(
                        left: 15.0,
                        right: 15.0,
                        top: 15,
                        bottom: _isTipoValid ? 15 : 20),
                    child: TextFormField(
                      key: const Key('tipologia'),
                      controller: tipoController,
                      onChanged: (value) {
                        setState(() {
                          _isTipoValid = validateNome(value);
                        });
                      },
...
                          begin: Alignment.topLeft,
                          end: Alignment.bottomRight,
                        ),
                        borderRadius: BorderRadius.circular(30.0),
                      ),
                      child: Container(
                        key: const Key('inserisciSupportoButton'),
                        width: screenWidth * 0.60,
                        height: screenWidth * 0.1,
                        padding: const EdgeInsets.all(10),
                        child: const Center(
                          child: Text(
                            'INSERISCI',
...
