...
                    padding: EdgeInsets.only(
                        left: 15.0,
                        right: 15.0,
                        top: 15,
                        bottom: _isUsernameValid ? 15 : 20),
                    child: TextFormField(
                      key: const Key('usernameField'),
                      controller: usernameController,
                      onChanged: (value) {
                        setState(() {
                          _isUsernameValid = validateUsername(value);
                        });
                      },
...
                    padding: EdgeInsets.only(
                        left: 15.0,
                        right: 15.0,
                        top: 15,
                        bottom: _isPasswordValid ? 15 : 20),
                    child: TextFormField(
                      key: const Key('passwordField'),
                      controller: pswController,
                      onChanged: (value) {
                        setState(() {
                          _isPasswordValid = validatePsw(value);
                        });
                      },
...
                    colors: [
                      Colors.blue,
                      Colors.purple,
                    ],
                  )),
              child: TextButton(
                key: const Key('loginButton'),
                onPressed: () {
                  submitForm();
                },
                child: const Text(
                  'ACCEDI',
                  style: TextStyle(
...
