...
                        AppRoutes.inserisciAlloggio,
                      );
                    },
                  ),
                  ListTile(
                    title: const Text(
                      'Inserisci supporto medico',
                      textAlign: TextAlign.center,
                      style: TextStyle(
                        fontFamily: 'Poppins',
                        fontWeight: FontWeight.bold,
                      ),
                    ),
...
