...
              height: 150,
              child: PageView.builder(
                itemCount: eventi.length,
                itemBuilder: (context, index) {
                  EventoDTO evento = eventi[index];
                  return GestureDetector(
                    key: const Key('eventoItem'),
                    onTap: () {
                      Navigator.pushNamed(
                        context,
                        AppRoutes.dettaglievento,
                        arguments: evento,
                      );
...
