...
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: GenericAppBar(
        showBackButton: true,
      ),
      endDrawer:
          GenericAppBar.buildDrawer(context, key: const Key('listaEventi')),
      body: Stack(
        children: [
          Positioned(
            top: 0,
            left: 0,
            right: 0,
...
