...
    return Scaffold(
      body: SingleChildScrollView(
        key: const Key('signUpPage'),
        child: Form(
          key: _formKey,
...
                    bottom: _isNomeValid ? 15 : 20),
                child: TextFormField(
                  key: const Key('nomeField'),
                  controller: nomeController,
                  onChanged: (value) {
...
                    bottom: _isCognomeValid ? 15 : 20),
                child: TextFormField(
                  key: const Key('cognomeField'),
                  controller: cognomeController,
                  onChanged: (value) {
...
                        },
                        child: TextFormField(
                          key: const Key('dataNascitaField'),
                          readOnly: true,
                          controller: dataNascitaController,
...
                    bottom: _isLuogoNascitaValid ? 15 : 20),
                child: TextFormField(
                  key: const Key('luogoNascitaField'),
                  controller: luogoNascitaController,
                  onChanged: (value) {
...
                    bottom: _isCodiceFiscaleValid ? 15 : 20),
                child: TextFormField(
                  key: const Key('cfField'),
                  controller: codiceFiscaleController,
                  onChanged: (value) {
...
                    bottom: _isCodiceFiscaleValid ? 15 : 20),
                child: DropdownButtonFormField<String>(
                  key: const Key('genereField'),
                  value: _selectedGender,
                  onChanged: (newValue) {
...
                    return null;
                  },
                  items: ['Maschio', 'Femmina', 'Non specificato']
                      .map<DropdownMenuItem<String>>(
                        (String value) => DropdownMenuItem<String>(
...
                    bottom: _isCittaValid ? 15 : 20),
                child: TextFormField(
                  key: const Key('cittaField'),
                  controller: cittaController,
                  onChanged: (value) {
...
                    bottom: _isViaValid ? 15 : 20),
                child: TextFormField(
                  key: const Key('viaField'),
                  controller: viaController,
                  onChanged: (value) {
...
                    bottom: _isProvinciaValid ? 15 : 20),
                child: TextFormField(
                  key: const Key('provinciaField'),
                  controller: provinciaController,
                  onChanged: (value) {
...
                    bottom: _isEmailValid ? 15 : 20),
                child: TextFormField(
                  key: const Key('emailField'),
                  controller: emailController,
                  onChanged: (value) {
...
                    bottom: _isTelefonoValid ? 15 : 20),
                child: TextFormField(
                  key: const Key('telefonoField'),
                  controller: telefonoController,
                  onChanged: (value) {
...
                    bottom: _isUsernameValid ? 15 : 20),
                child: TextFormField(
                  key: const Key('usernameField'),
                  controller: usernameController,
                  onChanged: (value) {
...
                    bottom: _isPasswordValid ? 15 : 20),
                child: TextFormField(
                  key: const Key('passwordField'),
                  controller: passwordController,
                  onChanged: (value) {
...
                    )),
                child: TextButton(
                  key: const Key('signUpButton'),
                  onPressed: () {
                    submitForm();
...
