...
                  colors: [
                    Colors.blue,
                    Colors.purple,
                  ],
                )),
            child: TextButton(
              key: const Key('loginButton'),
              onPressed: () {
                Navigator.pushNamed(
                  context,
                  AppRoutes.login,
                );
              },
...
